modules/gdscript/tests/scripts/parser/errors/missing_colon_setget_indent.gd
#GDTEST_PARSER_ERROR

var property
	get():
		return 0

func test():
	pass
